fix: restructuring the code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  flutter_dotenv: ^2.1.0
+  mqtt_client: ^8.0.0
 
 dev_dependencies:
   flutter_test:
